--- a/FormApp/FormApp/MainPage.xaml
+++ b/FormApp/FormApp/MainPage.xaml
@@ -3,9 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FormApp"
              x:Class="FormApp.MainPage">
-
-    <Button Text="Generate"  Clicked="GenerateFormPage"
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
-
+    <StackLayout>
+        <Button Text="Generate"  Clicked="GenerateFormPage"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+        <Button Text="Check Employee"  Clicked="CheckEmployee"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+    </StackLayout>
 </ContentPage>
