--- a/FormApp/FormApp/MainPage.xaml
+++ b/FormApp/FormApp/MainPage.xaml
@@ -6,7 +6,9 @@
     <StackLayout VerticalOptions="Center">
         <Button Text="Generate"  Clicked="GenerateFormPage"
             HorizontalOptions="Center" />
+        <Button Text="Test QA"  Clicked="GenerateFormPageTest"
+                HorizontalOptions="Center" />
         <Button Text="Check Employee"  Clicked="CheckEmployee"
-            HorizontalOptions="Center" />
+            HorizontalOptions="Center"/>
     </StackLayout>
 </ContentPage>
